test/functions/iterators/bharshbarg/moduleYield.good
moduleYield.chpl:1: error: yield statement is outside an iterator
