test/functions/iterators/bharshbarg/moduleYield.future
bug: compiler fails to warn about a yield outside a loop and runs into an internal error
